tests/test_files_pa3/SemanticErrors/bad_assignment2.ic
// error should be:
// semantic error at line 16: Illegal assignment (Type check)

class A {}

class B extends A {}

class D {
    B c;
}

class E extends D {
     static void main(string[] args){}
     
     void bad_assignment2() {
         c = new A();
     }
}